add sass support

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,11 @@
 
     <!-- libs -->
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="lib/velge/dist/velge.css" rel="stylesheet" type="text/css">
     <link href="lib/angular-loading-bar/build/loading-bar.min.css" rel="stylesheet" />
 
     <!-- App -->
-    <link href="public/styles/global.css" rel="stylesheet" />
-    <link href="public/styles/blog.css" rel="stylesheet" />
+    <link href="styles/global.css" rel="stylesheet" />
+    <link href="styles/blog.css" rel="stylesheet" />
 
 
 </head>
