--- a/public/index.html
+++ b/public/index.html
@@ -80,11 +80,17 @@
 
     <!-- application -->
     <script src="app/app.js"></script>
+
     <script src="app/services/blogger-service.js"></script>
+    <script src="app/services/user-service.js"></script>
+
     <script src="app/factories/blogger-manager.js"></script>
     <script src="app/services/file-upload.js"></script>
+
+    <script src="app/controllers/login-controller.js"></script>
     <script src="app/controllers/blogger-controller.js"></script>
     <script src="app/controllers/blogger-sidebar-controller.js"></script>
+
     <script src="app/directives/file-model.js"></script>
 
     <!-- bootstrap responsive stuff -->
