--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,13 @@
 
       <div class="blog-masthead">
         <div class="container">
+          <nav class="blog-nav" ui-view="navigation"></nav>
+          <!--
           <nav class="blog-nav">
-            <a class="blog-nav-item active" href="#">Home</a>
+            <a class="blog-nav-item active" href="#/welcome">Home</a>
+            <a class="blog-nav-item active" href="#/login">Login</a>
           </nav>
+        -->
         </div>
       </div>
 
@@ -83,11 +87,14 @@
     <script src="app/services/user-service.js"></script>
 
     <script src="app/factories/blogger-manager.js"></script>
+    <script src="app/factories/user-manager.js"></script>
     <script src="app/services/file-upload.js"></script>
 
     <script src="app/controllers/welcome-controller.js"></script>
     <script src="app/controllers/login-controller.js"></script>
+    <script src="app/controllers/logout-controller.js"></script>
     <script src="app/controllers/blogger-controller.js"></script>
+    <script src="app/controllers/navigation-controller.js"></script>
     <script src="app/controllers/blogger-sidebar-controller.js"></script>
 
     <script src="app/directives/file-model.js"></script>
