--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="lib/angular-animate/angular-animate.min.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.min.js"></script>
 
     <!-- application -->
     <script src="app/app.js"></script>
